--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-   <RelativeLayout
-       android:layout_width="match_parent"
-       android:layout_height="784px">
-    <ImageView
-        android:id="@+id/image"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="784px"
-        android:contentDescription="@string/the_selected_image_will_be_displayed_here"/>
-       <TextView
-           android:id="@+id/myImageViewText"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_margin="1dp"
-           android:text="The selected image will be displayed here"
-           android:gravity="center"
-           android:layout_alignLeft="@+id/image"
-           android:layout_alignTop="@+id/image"
-           android:layout_alignRight="@+id/image"
-           android:textColor="#000000"/>
-   </RelativeLayout>
+        android:layout_height="300dp">
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:contentDescription="@string/the_selected_image_will_be_displayed_here" />
+
+        <TextView
+            android:id="@+id/myImageViewText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/image"
+            android:layout_alignTop="@+id/image"
+            android:layout_alignRight="@+id/image"
+            android:layout_margin="1dp"
+            android:gravity="center"
+            android:text="The selected image will be displayed here"
+            android:textColor="#000000" />
+    </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
