--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,19 +30,20 @@
             android:layout_alignTop="@+id/image"/>
     </RelativeLayout>
 
-        <Button
-            android:id="@+id/scanButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="70dp"
-            android:layout_marginRight="70dp"
-            android:layout_alignLeft="@+id/image"
-            android:layout_alignRight="@+id/image"
-            android:layout_alignBottom="@+id/image"
-            android:background="@drawable/buttonbgr"
-            android:text="Scan"
-            android:textColor="#fff" />
+    <Button
+        android:id="@+id/scanButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/image"
+        android:layout_alignRight="@+id/image"
+        android:layout_alignBottom="@+id/image"
+        android:layout_marginLeft="70dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="70dp"
+        android:background="@drawable/buttonbgr"
+        android:onClick="onClick"
+        android:text="Scan"
+        android:textColor="#fff" />
 
     <!--<ProgressBar-->
         <!--android:id="@+id/progressBar"-->
